--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,16 +25,16 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
-
+    compileSdkVersion 32
+    targetSdkVersion 31
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 24
     }
     lintOptions {
         disable 'InvalidPackage'
     }
      dependencies {
-         implementation 'com.tapjoy:tapjoy-android-sdk:12.7.1@aar'
-         implementation 'com.google.android.gms:play-services-ads-identifier:17.0.1'
+         implementation 'com.tapjoy:tapjoy-android-sdk:12.11.0'
+         implementation 'com.google.android.gms:play-services-ads-identifier:17.1.0'
     }
 }
