--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,21 +4,21 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        jcenter()
-        maven {
-            name "Tapjoy's maven repo"
-            url "https://tapjoy.bintray.com/maven"
-        }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:7.0.0'
     }
 }
 
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            name "Tapjoy's maven repo"
+            url "https://sdk.tapjoy.com/"
+        }
     }
 }
 
